# AI-Powered-Personal-Research-Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: ingestion_pipeline.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  citations.py  compare.py  documents.py  graph.py  notes.py  related.py  review.py  search.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  chunk.py  citation.py  comparison.py  document.py  folder.py  literature_review.py  note.py  user.py
backend/app/schemas/: chat.py  citation_format.py  compare.py  document.py  graph.py  note.py  related.py  review.py  search.py  user.py
backend/app/services/: chunking.py  citation_formatter.py  comparison.py  embeddings.py  knowledge_graph.py  llm.py  metadata_extraction.py  pdf_extraction.py  rag.py  recommendation.py  review_support.py  semantic_scholar.py  semantic_search.py  summarization.py
backend/tests/: test_chunking.py  test_citation_formatter.py  test_pdf_extraction.py  test_rag.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/compare/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/components/: DocumentCard.tsx  PageHeader.tsx  Sidebar.tsx  StatTile.tsx  StatusBadge.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  auth.tsx  theme.tsx  types.ts
(+11 files in other folders)
