[project]
name = "research-assistant-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.4",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "tiktoken>=0.7",
    "google-genai>=1.0",
    "voyageai>=0.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
